[package]
name = "zorro"
version = "0.0.1"
authors = ["chrisftw", "roxannedunn"]
description = "Encode data into, and decode data out of images."
homepage = "https://github.com/chrisftw/zorro"
documentation = "https://github.com/chrisftw/zorro"
repository = "https://github.com/chrisftw/zorro"
readme = "README.md"
license-file = "LICENSE"
edition = "2018"

[dependencies]
png = "0.16.8"
base64 = "0.13.0"
lazy_static = "1.4.0"
